cluster/apps/default/nextcloud-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-prod
  labels:
    app.kubernetes.io/name: nextcloud-prod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud-prod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud-prod
    spec:
      securityContext:
        fsGroup: 82
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: nextcloud-prod
          image: nextcloud:23.0.3-fpm-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
          volumeMounts:
            - name: nextcloud-prod-config
              mountPath: /var/www/html
            - name: nextcloud-prod-data
              mountPath: /var/www/data
        - name: nextcloud-prod-cron
          image: nextcloud:23.0.3-fpm-alpine
          imagePullPolicy: IfNotPresent
          command:
            - /cron.sh
          volumeMounts:
            - name: nextcloud-prod-config
              mountPath: /var/www/html
            - name: nextcloud-prod-data
              mountPath: /var/www/data
        - name: nextcloud-proxy
          image: nginx:1.21-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          volumeMounts:
            - name: nextcloud-nginxconfig
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nextcloud-prod-config
              mountPath: /var/www/html
              readOnly: true
            - name: nextcloud-prod-data
              mountPath: /var/www/data
              readOnly: true
          startupProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: nextcloud.${SECRET_DOMAIN_2}
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: nextcloud.${SECRET_DOMAIN_2}
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: nextcloud.${SECRET_DOMAIN_2}
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: nextcloud-prod-config
          persistentVolumeClaim:
            claimName: nextcloud-prod-config
        - name: nextcloud-prod-data
          persistentVolumeClaim:
            claimName: nextcloud-prod-data
        - name: nextcloud-nginxconfig
          configMap:
            name: nextcloud-nginxconfig
