cluster/apps/default/nextcloud-prod/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`nextcloud.${SECRET_DOMAIN_2}`)
      middlewares:
        - name: headers@file
        - name: nextcloud-1@file
        - name: nextcloud-2@file
      services:
        - name: nextcloud
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_2}-prod-tls
